# logging

./: CMakeLists.txt  README.md  client  client.c  client.cpp  client.h  client01  config.h  demo.cpp  ipc.h  logclient  logclient.cpp  logserver  logserver.cpp  makefile  serv01  serv01.c  server  server.c  shm.cpp  shm.h  shm_client.c  test  test.cpp  testserver  testserver.cpp  unclient  unclient.cpp  unp.c  unp.h  unpipc.c  unpipc.h  unserver  unserver.cpp  util.cpp  util.h
include/: ipc.h  shm.h  util.h
logIf/: CMakeLists.txt
logIf/agent/: CMakeLists.txt
logIf/agent/include/: agent.h
logIf/agent/src/: agent.cpp
logIf/interface/: CMakeLists.txt
logIf/interface/include/: byteBuffer.h  interfaceMsg.h  ipc.h  pathMsg.h  shm.h  shmMsg.h  util.h
logIf/interface/src/: byteBuffer.cpp  interfaceMsg.cpp  pathMsg.cpp  shm.cpp  shmMsg.cpp  util.cpp
practice/: client01.c
